--- a/tex/AHX.tex
+++ b/tex/AHX.tex
@@ -48,18 +48,19 @@ Les mesures de $\Delta T^w$ sont réalisées au moyen de sondes de platine PT100
 
 
 \subsection{Température}
-
-
+\echaf{blablabla}
 
 \subsection{Débit d'eau}
 
-La mesure du débit d'eau circulant dans l'échangeur ambiant est également source d'incertitude. En effet, le débitmètre à turbine utilisé \textcolor{red}{Marque, modèle} s'écarte de la valeur vraie du débit quand celui-ci est faible. Pour estimer l'écart à la réalité, la mesure par le débitmètre à turbine est comparé à celle par un débimètre à ultrason \textcolor{red}{vraiment le meilleur ? pourquoi ne pas utiliser l'ultrason pour toutes les manips ? pour la "valeur vraie", pourquoi pas un volume d'eau connu et un chrono ?}
+La mesure du débit d'eau circulant dans l'échangeur ambiant est également source d'incertitude. En effet, le débitmètre à turbine utilisé \echaf{Marque, modèle} s'écarte de la valeur vraie du débit quand celui-ci est faible. Pour estimer l'écart à la réalité, la mesure par le débitmètre à turbine est comparé à celle par un débimètre à ultrason \echaf{vraiment le meilleur ? pourquoi ne pas utiliser l'ultrason pour toutes les manips ? pour la "valeur vraie", pourquoi pas un volume d'eau connu et un chrono ?}
 
 \begin{figure}[!ht]
     \centering
     \external{fig_IncertitudeDebitEau}
 %    \externalremake
     \input{../fig/fig_IncertitudeDebitEau/tex/IncertitudeDebitEau}
-    \caption[Incertitudes de mesure du débit d'eau dans l'échangeur ambiant]{Incertitudes de mesure du débit d'eau dans l'échangeur ambiant. \textbf{(a)} débit mesuré par le débitmètre à turbine $\dot q_{\sf tb}$ en fonction de celui mesuré par le débitmètre à ultrason $\dot q_{\sf us}$. \linebreak\textbf{(b)} écart relatif $\epsilon=\frac{|\dot q_{\sf us}-\dot q_{\sf tb}|}{\dot q_{\sf us}}$ entre les deux mesures obtenues.}
+    \caption[Incertitudes de mesure du débit d'eau dans l'échangeur ambiant]{Incertitudes de mesure du débit d'eau dans l'échangeur ambiant. \linebreak \textbf{(a)} débit mesuré par le débitmètre à turbine $\dot q_{\sf tb}$ en fonction de celui mesuré par le débitmètre à ultrason $\dot q_{\sf us}$. \linebreak\textbf{(b)} écart relatif $\epsilon=\frac{|\dot q_{\sf us}-\dot q_{\sf tb}|}{\dot q_{\sf us}}$ entre les deux mesures obtenues.}
     \label{fig:IncertitudeDebitEau}
-\end{figure}
+\end{figure}%
+
+Texte après le float
