--- a/tex/DispositifExpe.tex
+++ b/tex/DispositifExpe.tex
@@ -20,7 +20,7 @@ La pompe à chaleur a été dimensionnée et fabriquée dans le cadre du projet 
     \external{fig_SchemaGeneralTACOT}
 %    \externalremake
     \input{../fig/fig_TACOTSchematics/tex/fig_TACOTSchematics.tex}
-    \caption[Schéma général du réfrigérateur \textsc{Tacot} et mise en évidence des zones d'intérêt pour cette thèse]{Schéma général du réfrigérateur \textsc{Tacot}. Les \colorbox{MatlabYellow}{volume d'adapatation d'impédance} et \colorbox{MatlabOrange}{noyau thermoacoustique}, zones d'intérêt, sont mises en évidence.}
+    \caption{Schéma général du réfrigérateur \textsc{Tacot}.}
     \label{fig:SchemaGeneralTACOT}
 \end{figure}
 
@@ -112,15 +112,15 @@ Ensuite, la chaîne d'acquisition se compose de plus de trente capteurs. Tous ne
     \label{fig:TCdansNoyau}
 \end{figure}
 
-\paragraph*{Pression dynamique} Quatre sondes piézoélectriques \echaf{modèle} captent les oscillations de pression dans la pompe à chaleur. Deux sont placées à l'arrière de chacune des sources acoustiques, et les deux autres dans le canal de rétroaction de la cavité thermoacoustique. Ces sondes doivent supporter la pression statique élevée à l'intérieur de la machine, ainsi que l'amplitude acoustique nécessaire au processus thermoacoustique. De plus, ces sondes doivent être affleurantes aux parois auxquelles elles sont montées, ce qui empêche leur installation au sein du noyau. Toutefois, la longueur d'onde \echaf{valeur} est suffisamment grande pour garantir une amplitude de pression constante dans toute la machine.
+\paragraph*{Pression dynamique} Quatre sondes piézoélectriques (PCB Piezotronics, 113B28) captent les oscillations de pression dans la pompe à chaleur. Deux sont placées à l'arrière de chacune des sources acoustiques, et les deux autres dans le canal de rétroaction de la cavité thermoacoustique. Les capteurs sont ensuite connectés à une carte d'acquisition (National Instruments, NI9234). Ces sondes doivent supporter la pression statique élevée à l'intérieur de la machine, ainsi que l'amplitude acoustique nécessaire au processus thermoacoustique. De plus, elles doivent être affleurantes aux parois auxquelles elles sont montées, ce qui empêche leur installation au sein du noyau. Toutefois, la longueur d'onde dans le mélange de gaz vaut $\lambda=\qty{11.7}{\meter}$ à la fréquence de fonctionnement $f=\qty{47}{\hertz}$ et est suffisamment grande pour garantir une amplitude de pression constante dans toute la machine.
 
-\paragraph*{Pression statique} Deux capteurs \echaf{modèle} sont connectés sur les deux tuyaux d'alimentation en gaz de la pompe  à chaleur. Ces derniers se trouvent de part et d'autre de la source acoustique principale et on pour but d'éviter une surpression sur sa face avant ou arrière.
+\paragraph*{Pression statique} Deux capteurs (Endress, Cerabar PMP21) sont connectés sur les deux tuyaux d'alimentation en gaz de la pompe  à chaleur d'un côté, et sur une carte d'acquisition (National Instruments, NI9234) de l'autre. Les arrivées de gaz se trouvent de part et d'autre de la source acoustique principale et on pour but d'éviter une surpression sur sa face avant ou arrière et son endommagement.
 
-\paragraph*{Puissance extraite par l'échangeur ambiant} Le fonctionnement de cet échangeur est détaillé dans l'annexe~\ref{chap:AHX}. Pour déterminer la quantité de chaleur extraite du côté ambiant du noyau, la différence de température entre l'entrée d'eau de l'échangeur et sa sortie d'eau est mesurée grâce à deux sondes de platine PT100.
+\paragraph*{Puissance extraite par l'échangeur ambiant} Le fonctionnement de cet échangeur est détaillé dans l'annexe~\ref{chap:AHX}. Pour déterminer la quantité de chaleur extraite du côté ambiant du noyau, la différence de température entre l'entrée d'eau de l'échangeur et sa sortie d'eau est mesurée grâce à deux sondes de platine PT100 connectées sur une carte d'acquisition (National Instruments, NI9217).
 
-\paragraph*{Déplacement des sources} Le piston de chaque source acoustique est équipé d'un accéléromètre. Ces capteurs sont choisis de sorte à ne pas trop varier la masse de l'équipage mobile, en particulier pour la source secondaire où la masse du piston et celle de l'ensemble accéléromètre et câble sont du même ordre de grandeur.\bigskip
+\paragraph*{Déplacement des sources} Le piston de chaque source acoustique est équipé d'un accéléromètre. Pour la source acoustique principale, l'accéléromètre (MMF, KS91C) est collé sur la face arrière, tandis que pour la source secondaire, le capteur (PCB Piezotronics, 352C23) est collé sur la face avant. Ces capteurs sont choisis de sorte à ne pas trop varier la masse de l'équipage mobile, en particulier pour la source secondaire où la masse du piston et celle de l'ensemble accéléromètre et câble sont du même ordre de grandeur : il s'agit d'un.\bigskip
 
-Tous les capteurs situés à l'intérieur de la machine sous haute pression statique sont reliées à l'extérieur via des traversées étanches \echaf{Spectite, modèle}, dimensionnées pour \qty{550}{\bar}.
+Tous les capteurs situés à l'intérieur de la machine sous haute pression statique sont reliées à l'extérieur via des traversées étanches (Spectite, HF2-8CU+16K), dimensionnées pour \qty{550}{\bar}.
 
 %Les signaux de tensions aux bornes des sources acoustiques sont acquis par une carte d'acquisition (National Instruments, (\echaf{modèle}), après connexion à une sonde de tension (\echaf{modèle}). Deux accéléromètres (\echaf{modèle}) sont collés sur les sources pour mesurer leur déplacement. Pour connaître la pression acoustique dans la cavité thermoacoustique, quatre sondes (\echaf{modèle}) sont placées respectivement à l'arrière de la source principale, à l'arrière de la source secondaire 
 
@@ -169,7 +169,7 @@ Tous les capteurs situés à l'intérieur de la machine sous haute pression stat
 %\end{figure}
 
 \section{Protocole expérimental}\label{chap:ProtocolExpe}
-Pour l'étude de l'influence de la gravité sur la distribution de température, le réfrigérateur doit pouvoir être orienté dans toutes les orientations utiles. Pour ce faire, il est suspendu par des palans grâce aux fixations situées à ses extrémité  et au milieu dans le sens de sa longueur. La figure~\ref{fig:TACOTSuspendu_Frigo} présente le réfrigérateur accroché à ses extrémités, et la figure~\ref{fig:TACOTSuspendu_Palans} les trois palans qui le soutiennent. Les deux palans de couleur grise, initialement présents pour régler l'inclinaison de la pompe à chaleur par rapport à l'axe horizontal, et le troisième de couleur bleue pour ajouter une direction de rotation autour de l'axe de symétrie. Celui-ci permet en outre de plus aisément passer d'une orientation à l'autre. 
+Pour l'étude de l'influence de la gravité sur la distribution de température dans son noyau et ses performances, le réfrigérateur doit pouvoir être orienté dans toutes les orientations utiles. Pour ce faire, il est suspendu par des palans grâce aux fixations situées à ses extrémité  et au milieu dans le sens de sa longueur. La figure~\ref{fig:TACOTSuspendu_Frigo} présente le réfrigérateur accroché à ses extrémités, et la figure~\ref{fig:TACOTSuspendu_Palans} les trois palans qui le soutiennent. Les deux palans de couleur grise, initialement présents pour régler l'inclinaison de la pompe à chaleur par rapport à l'axe horizontal, et le troisième de couleur bleue pour ajouter une direction de rotation autour de l'axe de symétrie. Celui-ci permet en outre de plus aisément passer d'une orientation à l'autre. 
 
 \begin{figure}[!ht]
     \centering
@@ -191,7 +191,7 @@ Pour l'étude de l'influence de la gravité sur la distribution de température,
 
 \subsection{Définition des orientations}
 
-Les orientations choisies au moyen des palans sont décrites par deux angles $\psi_v$ et $\psi_h$. Le premier désigne l'angle entre l'axe horizontal et l'axe de symétrie du réfrigérateur, tandis que le second, la rotation autour de cet axe de symétrie. Les orientations utilisées dans les différentes parties de ce manuscript sont présentées sur la figure~\ref{fig:OrientationCore}. Cette figure, dans laquelle la gravité est toujours dirigée vers le bas de la page, présente également les emplacements des thermocouples utilisés. \medskip
+Les orientations choisies au moyen des palans sont décrites par deux angles $\psi_v$ et $\psi_h$. Le premier désigne l'angle entre l'axe horizontal et l'axe de symétrie du réfrigérateur, tandis que le second, la rotation autour de cet axe de symétrie. Les orientations utilisées dans les différentes parties de ce manuscript sont présentées sur la figure~\ref{fig:OrientationCore}. Cette figure, dans laquelle la gravité est toujours dirigée vers le bas de la page, présente également les emplacements et les numéros d'identification des thermocouples utilisés.\medskip
 
 \begin{figure}[!ht]
     \centering
@@ -219,7 +219,7 @@ Les orientations choisies au moyen des palans sont décrites par deux angles $\p
 		\caption{`\texttt{V2}'}
 		\label{fig:OrientationCore_V2}
 	\end{subfigure}   
-    \caption{Différentes orientations du c\oe{}ur thermoacoustique avec les positions des thermocouples et leurs numéro. Pour chaque cas, la gravité est orientée vers le bas. Les orientations correspondent aux angles \subref{fig:OrientationCore_H1} $\psi_v=\ang{0}$ et $\psi_h=\ang{0}$ pour l'orientation `\texttt{H1}', \subref{fig:OrientationCore_H2} $\psi_v=\ang{0}$ et $\psi_h=\ang{+90}$ pour l'orientation `\texttt{H2}', \subref{fig:OrientationCore_V1} $\psi_v=\ang{-90}$ pour l'orientation `\texttt{V1}', et \subref{fig:OrientationCore_V2} $\psi_v=\ang{+90}$ pour l'orientation `\texttt{V2}'.}%\textcolor{red}{CHX et AHX OK ou éch. froid et éch. chaud ? + $\psi_i$ dans la caption ou la figure ?}}
+    \caption{Différentes orientations du c\oe{}ur thermoacoustique avec les positions des thermocouples et leurs numéro. Pour chaque cas, la gravité est orientée vers le bas. Les orientations correspondent aux angles \subref{fig:OrientationCore_H1}~$\psi_v=\ang{0}$ et $\psi_h=\ang{0}$ pour l'orientation `\texttt{H1}', \subref{fig:OrientationCore_H2}~$\psi_v=\ang{0}$ et $\psi_h=\ang{+90}$ pour l'orientation `\texttt{H2}', \subref{fig:OrientationCore_V1}~$\psi_v=\ang{-90}$ pour l'orientation `\texttt{V1}', et \subref{fig:OrientationCore_V2}~$\psi_v=\ang{+90}$ pour l'orientation `\texttt{V2}'.}%\textcolor{red}{CHX et AHX OK ou éch. froid et éch. chaud ? + $\psi_i$ dans la caption ou la figure ?}}
     \label{fig:OrientationCore} %
 \end{figure}
 
@@ -229,7 +229,7 @@ La première orientation, nommée `\texttt{H1}' et représentée sur la figure~\
 
 Ensuite, la deuxième orientation est représentée sur la figure~\ref{fig:OrientationCore_H2}. Dans ce cas, référérencé en tant que `\texttt{H2}', le réfrigérateur est toujours à l'horizontale ($\psi_v=\qty{0}{\degree}$), mais pivoté autour de son axe pour placer les thermocouples sur un plan horizontal auquel la gravité est orthogonale ($\psi_h=\qty{90}{\degree}$).\smallskip
 
-L'orientation `\texttt{V1}' est affichée sur la figure~\ref{fig:OrientationCore_V1}. Cette configuration est radicalement différentes des deux précédentes : l'axe de symétrie du réfrigérateur est vertical, avec l'échangeur froid sous l'échangeur ambiant ($\psi_v=\qty{-90}{\degree}$). \smallskip
+L'orientation `\texttt{V1}' est affichée sur la figure~\ref{fig:OrientationCore_V1}. Cette configuration est radicalement différentes des deux précédentes : l'axe de symétrie du réfrigérateur est vertical, avec l'échangeur froid sous l'échangeur ambiant, soit $\psi_v=\qty{-90}{\degree}$. \smallskip
 
 Enfin, l'orientation `\texttt{V2}' affichée sur la figure~\ref{fig:OrientationCore_V2} est l'orientation inverse de la précédente. L'axe de symétrie du réfrigérateur est encore vertical, mais la source acoustique principale est cette fois au dessus du noyau thermoacoustique et $\psi_v=\qty{+90}{\degree}$.
 
@@ -239,16 +239,16 @@ Les acquisitions sont réalisées en plusieurs temps. Tout d'abord et pour toute
 
 Ensuite, en prévision de la mesure de flux de chaleur $\dot Q_a$ extrait par l'échangeur ambiant (voir l'annexe~\ref{chap:AHX}), l'eau est préalablement mise en circulation dans cet échangeur après avoir démarré une acquisition des 30 capteurs jusqu'à stabilisation de la distribution de température dans le noyau. L'acquisition est ensuite interrompue et enregistrée avec un label `\texttt{Water}'. \bigskip
 
-L'étape suivante dépend du type d'expérience menée : les mesures peuvent être sans ou avec acoustique, et ce, pour  différentes amplitudes de pression oscillante. En revanche, certains des paramètres d'excitation reste constant pour toutes les expériences :  le gaz est également le même dans toutes les expériences. Il est composé de \qty{65}{\percent} d'hélium et de \qty{35}{\percent} d'argon, car dans ces proportions le nombre de Prandtl est minimum ; le mélange est pressurisé à \qty{40}{\bar}. Dans le cas des expériences à \textit{drive ratio} non nul, la fréquence est toujours de \qty{47}{\hertz}, car la prédiction des performances annonce les meilleurs résultats. Comme c'est également la fréquence de résonance du système, c'est le seul point de fonctionnement ou l'impédance électrique est supérieure à la limite basse admise par l'amplificateur, soit \qty{2}{\ohm}. Ensuite, le déphasage inter-source $\varphi_{2-1}$ est également fixé à \ang{-60}, ce que le modèle \textsc{DeltaEC} indique comme déphasage optimale et que des expériences préliminaires confirment.
+L'étape suivante dépend du type d'expérience menée : les mesures peuvent être sans ou avec acoustique, et ce, pour  différentes amplitudes de pression oscillante. En revanche, certains des paramètres d'excitation restent constants pour toutes les expériences :  le gaz est également le même dans toutes les expériences. Il est composé de \qty{65}{\percent} d'hélium et de \qty{35}{\percent} d'argon, car dans ces proportions le nombre de Prandtl est minimum \cite{belcher_working_1999} ; ce mélange est ensuite pressurisé à \qty{40}{\bar}. Dans le cas des expériences à \textit{drive ratio} non nul, le modèle \textsc{DeltaEC} prédit les meilleurs performances à la fréquence $f=\qty{47}{\hertz}$, c'est-à-dire la fréquence de résonance du système. C'est par ailleurs le seul point de fonctionnement où l'impédance électrique est supérieure à la limite basse admise par l'amplificateur, soit \qty{2}{\ohm}. Ensuite, le déphasage inter-source $\varphi_{2-1}$ est également fixé à \ang{-60} pour toutes les expériences, également indiqué comme déphasage optimale par les simulations et que des expériences préliminaires confirment.
 
 \paragraph{Mesures sans acoustique}\label{chap:MesureSansAcou}
-Pour ces mesures de type `\texttt{heat\_{}only}', la charge thermique est appliquée au noyau sans alimenter les sources acoustiques. Cette charge thermique consiste en l'alimentation des cartouches chauffantes contenues dans l'échangeur froid par une puissance électrique connue, tandis qu'un débit d'eau de \qty{7}{\litre\per\minute} s'écoule dans l'échangeur ambiant qui se trouve de l'autre côté du noyau. 
+Pour ces mesures de type `\texttt{heat\_{}only}', la charge thermique est appliquée au noyau sans alimenter les sources acoustiques. Cette charge thermique consiste en l'alimentation électrique de cartouches chauffantes contenues dans l'échangeur froid par une puissance connue, tandis qu'un débit d'eau de \qty{7}{\litre\per\minute} s'écoule dans l'échangeur ambiant qui se trouve de l'autre côté du noyau. 
 
 Ces mesures doivent permettre d'étudier la distribution de température en l'absence d'écoulement oscillant, ainsi que de calculer les valeurs de conductivité thermique $k_x$ et $k_r$ ou les coefficients de pertes latérales $h_x$ et $h_r$.\medskip
 
-Dans ce type d'expériences, les noms des zones \og froide \fg{} et \og ambiante \fg{} sont conservés pour des raisons de clarté, mais l'eau circulant dans l'échangeur ambiant et les cartouches chauffantes se trouvant dans l'échangeur froid, la direction du gradient de température dans le noyau thermoacoustique est inversée par rapport aux expériences avec acoustique. %Toutefois, les ordres de grandeur des différences de température sont les mêmes que pour les expériences avec acoustique, c'est-à-dire 
+Dans ce type d'expériences, les noms des zones \og froide \fg{} et \og ambiante \fg{} sont conservés pour des raisons de cohérence avec les schémas présentés auparavant, mais l'eau circulant dans l'échangeur ambiant et les cartouches chauffantes se trouvant dans l'échangeur froid, la direction du gradient de température dans le noyau thermoacoustique est inversée par rapport aux expériences avec acoustique. %Toutefois, les ordres de grandeur des différences de température sont les mêmes que pour les expériences avec acoustique, c'est-à-dire 
 
-Pour garder un moyen de comparaison avec les mesures avec acoustique, le mélange de gaz est le même.
+%Pour garder un moyen de comparaison avec les mesures avec acoustique, le mélange de gaz est le même.
 
 \paragraph{Mesures avec acoustique}\label{chap:MesureAvecAcou} 
 Une acquisition étiquetée `\texttt{Acou}' est démarrée, puis les sources sont alimentées jusqu'à l'amplitude souhaitée. Au bout d'une heure, l'acquisition est arrêtée et sauvegardée. En l'absence d'expérience avec charge thermique, c'est la fin de l'expérience : toutes les sources acoustiques et circulations d'eau sont progressivement arrêtées et le réfrigérateur est laissé pour un retour à l'état initial.
@@ -271,11 +271,11 @@ Ensuite, une simulation par éléments finis de cette cavité sur le logiciel Co
 
 \subsubsection{\'Etude simplifiée}
 \paragraph{Sans acoustique}
-Pour introduire des concepts utiles à la compréhension des phénomènes de convection naturelle, une étude très simplifiée dans une cavité rectangulaire en 2D et représentée sur les figures~\ref{fig:SimuConvNat2D}\textbf{(a)} et \textbf{(b)} est menée. 
+Pour introduire des concepts utiles à la compréhension des phénomènes de convection naturelle, une étude très simplifiée dans une cavité rectangulaire en 2D et représentée sur les figures~\ref{fig:SimuConvNat2D}{\color{MatlabOrange}(a)} et {\color{MatlabOrange}(b)} est menée. 
 
-Dans la première sous-figure~\ref{fig:SimuConvNat2D}\textbf{(a)}, les parois verticales droite et gauche sont respectivement maintenues à une température froide $T_f$ et chaude $T_c$, tandis que le sol, le plafond et le gaz au repos sont à la température $T_\infty$. En régime stationnaire, il s'établit une cellule de convection naturelle dans laquelle le gaz est mis en mouvement par les  variations de masse volumique proches des parois verticales. Cette configuration s'apparente aux orientations `\texttt{H1}' et `\texttt{H2}', respectivement présentées sur les figures~\ref{fig:OrientationCore_H1} et \subref{fig:OrientationCore_H2}.
+Dans la première sous-figure~\ref{fig:SimuConvNat2D}{\color{MatlabOrange}(a)}, les parois verticales droite et gauche sont respectivement maintenues à une température froide $T_f$ et chaude $T_c$, tandis que le sol, le plafond et le gaz au repos sont à la température $T_\infty$. En régime stationnaire, il s'établit une cellule de convection naturelle dans laquelle le gaz est mis en mouvement par les  variations de masse volumique proches des parois verticales. Cette configuration s'apparente aux orientations `\texttt{H1}' et `\texttt{H2}', respectivement présentées sur les figures~\ref{fig:OrientationCore_H1} et \subref{fig:OrientationCore_H2}.
 
-Dans la seconde sous-figure~\ref{fig:SimuConvNat2D}\textbf{(b)}, ce sont cette fois les sol et plafond qui sont fixés aux températures chaude $T_c$ et froide $T_f$, et les murs et le gaz au repos pour lesquels la température est $T_\infty$. Dans cette configuration, favorable a priori à la mise en place d'une instabilité de \og Rayleigh-Bénard \fg{}, il peut s'établir une ou plusieurs cellules de convection naturelle si le nombre de Rayleigh $\Rayleigh$ est supérieur à un nombre de Rayleigh critique $\Rayleigh_c$ \echaf{valeur 1700 ? + citation}. Le gaz s'élève de la paroi chaude jusqu'à la paroi froide, de laquelle il redescend ensuite pour revenir à son point de départ. Dans ce cas, la cellule de convection naturelle peut adopter une structure très complexe, plus que ce que peut suggérer la figure~\ref{fig:SimuConvNat2D}\textbf{(b)} qui ne représente qu'une illustration grossière du mouvement du fluide. Les expériences correspondant à ce cas sont mises en place en suivant les orientations `\texttt{V1}' et `\texttt{V2}', présentés respectivement sur les figures~\ref{fig:OrientationCore_V1} et \subref{fig:OrientationCore_V2}
+Dans la seconde sous-figure~\ref{fig:SimuConvNat2D}{\color{MatlabOrange}(b)}, ce sont cette fois les sol et plafond qui sont fixés aux températures chaude $T_c$ et froide $T_f$, et les murs et le gaz au repos pour lesquels la température est $T_\infty$. Dans cette configuration, favorable a priori à la mise en place d'une instabilité de \og Rayleigh-Bénard \fg{}, il peut s'établir une ou plusieurs cellules de convection naturelle si le nombre de Rayleigh $\Rayleigh$ est supérieur à un nombre de Rayleigh critique $\Rayleigh_c$ \echaf{valeur 1700 ? + citation}. Le gaz s'élève de la paroi chaude jusqu'à la paroi froide, de laquelle il redescend ensuite pour revenir à son point de départ. Dans ce cas, la cellule de convection naturelle peut adopter une structure très complexe, plus que ce que peut suggérer la figure~\ref{fig:SimuConvNat2D}{\color{MatlabOrange}(b)} qui ne représente qu'une illustration grossière du mouvement du fluide. Les expériences correspondant à ce cas sont mises en place en suivant les orientations `\texttt{V1}' et `\texttt{V2}', présentés respectivement sur les figures~\ref{fig:OrientationCore_V1} et \subref{fig:OrientationCore_V2}
 
 \begin{figure}[!ht]
     \centering
