--- a/tex/_main_.tex
+++ b/tex/_main_.tex
@@ -168,7 +168,7 @@
 \usepackage{subcaption}
 	\renewcommand\thesubfigure{(\alph{subfigure})}
 	\captionsetup[subfigure]{labelformat=simple}
-	\captionsetup{labelfont=bf}
+	\captionsetup{labelfont=bf,font=footnotesize,width=.95\textwidth}
 \usepackage{dcolumn}% Align table columns on decimal point
 
 \usepackage[
